Successfull connection. Added pip ldap3 to server dependencies

--- a/python_script/test_the_module.yaml
+++ b/python_script/test_the_module.yaml
@@ -2,7 +2,10 @@
  - hosts: all
    tasks:
    - name: test the module
-     ldap: name=epel-release
+     ldap: name=epel-release state=present
+
+     
+
 
 #   - name: Install packages
 #     yum: name={{ item }} state=present
