--- a/roles/set_up_server/tasks/server_dependencies.yaml
+++ b/roles/set_up_server/tasks/server_dependencies.yaml
@@ -1,14 +1,9 @@
 ---
- - hosts: all
-   tasks:
-   - name: Set EPEL repo
-     yum: name=epel-release state=present
+   - name: Set needed repositories.
+     yum: name={{ repo_list }} state=present
 
    - name: Install Linux packages
-     yum: name={{ item }} state=present
-     with_items:
-      - openldap
-      - openldap-servers
+     yum: name={{ linux_packages }} state=present
 
    - name: Install Python packages
-    pip: name=ldap3 state=present
+     pip: name={{ python_packages }} state=present
