--- a/roles/set_up_server/tasks/add_user.yaml
+++ b/roles/set_up_server/tasks/add_user.yaml
@@ -6,7 +6,10 @@
 #            firstname: 'char_temp3'               # aliases don't work the way i want them to :(
 #            lastname: "Ash's"     
 #            groups: 'Fire, Pokemon'
-#        state: present 
+#       state: present 
+#       admin_cn: "{{ admin_cn }}"
+#       admin_pass: "{{ admin_pass }}" 
+#       server: "{{ server }}"
 
 
     - name: test the module    with friendly version
@@ -14,10 +17,13 @@
         mode:
           friendly:
             gn: 'char_temp3'
-            sn: "Ash's"
+            sn: "Ashs"
             ou: 'Fire, Pokemon'
         state: present 
-
+        admin_cn: "{{ admin_cn }}"
+        admin_pass: "{{ admin_pass }}" 
+        server_hostname: "{{ server_hostname }}"
+        server_domain: "{{ server_domain }}"
 
 
 #   - name: test the module      with dn
@@ -26,6 +32,9 @@
 #          dn:
 #            dn:  'cn=Bal_temp2,ou=Water,ou=Pokemon,dc=localdomain'
 #        state: present 
+#        admin_cn: "{{ admin_cn }}"
+#        admin_pass: "{{ admin_pass }}" 
+#        server: "{{ server }}"
 
 
 
