--- a/roles/set_up_server/tasks/set_up_DB_task.yaml
+++ b/roles/set_up_server/tasks/set_up_DB_task.yaml
@@ -24,6 +24,6 @@
          dest:  "{{ path_to_DB_base['dest'] }}"
 
      - name: Build DIT with DB_base directory structure
-       shell: ldapadd -cx -w {{admin_pass}} -D "cn=Manager,dc={{domain}}" -f {{ path_to_DB_base['dest'] }}
+       shell: ldapadd -cx -w {{admin_pass}} -D "cn=Manager,dc={{server_domain}}" -f {{ path_to_DB_base['dest'] }}
        register: ldap_cmd
        failed_when: ldap_cmd.rc != 0 and ldap_cmd.rc != 68    
