--- a/roles/set_up_server/tasks/add_user.yaml
+++ b/roles/set_up_server/tasks/add_user.yaml
@@ -12,30 +12,29 @@
 #       server: "{{ server }}"
 
 
-    - name: test the module    with friendly version
-      ldap: 
-        mode:
-          friendly:
-            gn: 'char_temp3'
-            sn: "Ashs"
-            ou: 'Fire, Pokemon'
-        state: present 
-        admin_cn: "{{ admin_cn }}"
-        admin_pass: "{{ admin_pass }}" 
-        server_hostname: "{{ server_hostname }}"
-        server_domain: "{{ server_domain }}"
-
-
-#   - name: test the module      with dn
+#    - name: test the module    with friendly version
 #      ldap: 
 #        mode:
-#          dn:
-#            dn:  'cn=Bal_temp2,ou=Water,ou=Pokemon,dc=localdomain'
+#          friendly:
+#            gn: 'char_temp3'
+#            sn: "Ashs"
+#            ou: 'Fire, Pokemon'
 #        state: present 
 #        admin_cn: "{{ admin_cn }}"
 #        admin_pass: "{{ admin_pass }}" 
-#        server: "{{ server }}"
+#        server_hostname: "{{ server_hostname }}"
+#        server_domain: "{{ server_domain }}"
 
 
+    - name: test the module      with dn
+      ldap:
+        mode:
+          dn:
+            dn: 'cn=Bal temp2,ou=Water,ou=Pokemon,dc=localdomain'
+        state: present                                          
+        admin_cn: "{{ admin_cn }}"                             
+        admin_pass: "{{ admin_pass }}" 
+        server_hostname: "{{ server_hostname }}"
+        server_domain: "{{ server_domain }}"
 
 
